syntax = "proto3";

package account;

option go_package = "github.com/f0rmul/payment-service/pkg/payment-service;payment_service";

message Account{
    string id = 1;
    string ownerId = 2;
    uint64 balance = 3;
    int64 createdAt = 4;
}

message CreateAccountRequest {
    string ownerId = 1;
}
message CreateAccountResponse{
    string id =1;
}


message AccountDepositRequest{
    string id = 1;
    uint64 amount = 2;
}
message AccountDepositResponse{}


message AccountWithdrawRequest{
    string id =1;
    uint64 amount =2;
}
message AccountWithdrawResposne{}


message AccountTransferRequest{
    string from = 1;
    string to =2;
    uint64 amount = 3;
}
message AccountTransferResponse{}


message AccountBalanceRequest{
    string id = 1;
}
message AccountBalanceResponse{
    string id =1;
    uint64 balance = 3;
}

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse){}
    rpc Deposit(AccountDepositRequest) returns (AccountDepositResponse) {}
    rpc Withdraw(AccountWithdrawRequest) returns (AccountWithdrawResposne){}
    rpc Transfer(AccountTransferRequest) returns (AccountTransferResponse) {}
    rpc GetBalance(AccountBalanceRequest) returns (AccountBalanceResponse){}
}